--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -802,3 +802,13 @@ margin: 0px;
   flex-direction: column;
   align-items: flex-end;
 }
+
+
+.alertify.ajs-closable .ajs-commands button.ajs-close{
+  display: inline-block;
+  background-color: white;
+  padding: 24px;
+  border-radius: 100px;
+  margin-top: 24px;
+  background-image:url("../image/close.png") !important;
+}
