--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1071,3 +1071,71 @@ width: 200px;
   align-items: center;
   flex-direction: column;
 }
+
+
+.checkout-body-image{
+  max-width: 200px;
+  margin-top: 100px;
+}
+
+.checkout-text-success{
+  font-size: 24px;
+  margin-top: 32px;
+  color: #27ae60;
+}
+
+.ui-keyboard{
+  background-color: #DCDCDC;
+  border-radius: 0px;
+  padding: 40px !important;
+  bottom: 0 !important;
+  top: initial !important;
+      width: 1000px !important;
+      display: flex;
+      justify-content: center;
+}
+
+.ui-keyboard-preview{
+  margin: 0 0 16px 0 !important;
+  height: 32px;
+  border-radius: 4px;
+  border: 2px solid #b1b1b1;
+}
+
+.ui-keyboard-button{
+  line-height: 0em !important;
+  margin: 0em .4em .4em 0em !important;
+  border: none;
+  background-color: #f2f2f2;
+  color: #424242;
+  border-radius: 6px;
+  height: 2.75em !important;
+  max-width: initial;
+  font-size: 32px;
+  width: 2.75em !important
+}
+
+
+/* .ui-keyboard-button{
+  line-height: 0em !important;
+  margin: 0em .4em .4em 0em !important;
+  border: none;
+  background-color: #f2f2f2;
+  color: #424242;
+  border-radius: 6px;
+  height: 3em !important;
+  max-width: 3em !important;
+  font-size: 28px;
+} */
+
+.ui-keyboard-keyset{
+  width: 100%;
+}
+
+.ui-keyboard-space {
+    min-width: 10em !important;
+}
+
+.ui-keyboard-shift{
+  min-width: 4em !important;
+}
