--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -235,8 +235,8 @@ margin: 0px;
 
 .card-image{
   width: 250px;
-  height: 250px;
-  padding: 40px 0px;
+  margin: 40px;
+  border-radius: 20px;
 }
 
 .card{
@@ -372,6 +372,8 @@ th, td {
   flex-grow: 2;
   margin-right: 48px;
   padding: 8px;
+  height: 250px;
+  overflow-y: scroll;
 }
 
 hr{
@@ -628,8 +630,9 @@ input {
 .bundle-overlay-image{
   width: 100%;
   height: 40%;
-  background-position: center;
   border-top-left-radius: 10px;
+  background-size: cover;
+  background-position: center;
   border-top-right-radius: 10px;
 }
 
@@ -689,6 +692,8 @@ input {
 
 .bundle-details-menu{
   flex-grow: 1;
+  height: 300px;
+  overflow-y: scroll;
 }
 
 
@@ -1084,15 +1089,21 @@ width: 200px;
   color: #27ae60;
 }
 
+.checkout-text-failed{
+  font-size: 24px;
+  margin-top: 32px;
+  color: #e74c3c;
+}
+
 .ui-keyboard{
   background-color: #DCDCDC;
   border-radius: 0px;
   padding: 40px !important;
   bottom: 0 !important;
   top: initial !important;
-      width: 1000px !important;
-      display: flex;
-      justify-content: center;
+  width: 1000px !important;
+  display: flex;
+  justify-content: center;
 }
 
 .ui-keyboard-preview{
@@ -1115,17 +1126,21 @@ width: 200px;
   width: 2.75em !important
 }
 
+.ui-keyboard-button:focus{
+  background-color: #A3A3A3;
+}
+
 
 /* .ui-keyboard-button{
-  line-height: 0em !important;
-  margin: 0em .4em .4em 0em !important;
-  border: none;
-  background-color: #f2f2f2;
-  color: #424242;
-  border-radius: 6px;
-  height: 3em !important;
-  max-width: 3em !important;
-  font-size: 28px;
+line-height: 0em !important;
+margin: 0em .4em .4em 0em !important;
+border: none;
+background-color: #f2f2f2;
+color: #424242;
+border-radius: 6px;
+height: 3em !important;
+max-width: 3em !important;
+font-size: 28px;
 } */
 
 .ui-keyboard-keyset{
@@ -1133,9 +1148,27 @@ width: 200px;
 }
 
 .ui-keyboard-space {
-    min-width: 10em !important;
+  min-width: 10em !important;
 }
 
 .ui-keyboard-shift{
   min-width: 4em !important;
+}
+
+
+.styled-select.slate {
+  background-color: #f2f2f2;
+  border: 2px solid #c8c8c8;
+  width: 30%;
+  display: flex;
+  border-radius: 6px;
+  flex-grow: 1;
+}
+
+.styled-select.slate select {
+  font-size: 18px;
+  color: #4A4A4A;
+  background-color: #f2f2f2;
+  padding-left: 16px;
+  width: 100px;
 }
