--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -361,6 +361,7 @@ th, td {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  width: 25%;
   justify-content: space-evenly;
 }
 
@@ -692,8 +693,9 @@ input {
 
 .bundle-details-menu{
   flex-grow: 1;
-  height: 300px;
-  overflow-y: scroll;
+      height: 300px;
+      overflow-y: scroll;
+      flex-basis: 55%;
 }
 
 
