--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -234,7 +234,7 @@ margin: 0px;
 } */
 
 .card-image{
-  width: 250px;
+  width: 160px;
   margin: 40px;
   border-radius: 20px;
 }
@@ -246,7 +246,8 @@ margin: 0px;
   flex-grow: 1;
   margin: 10px;
   height: 300px;
-  flex-basis: 30%;
+  flex-basis: 20%;
+  /* flex-basis: 20%; */
   overflow: hidden;
   position: relative;
   border-radius: 8px;
@@ -286,14 +287,14 @@ margin: 0px;
 }
 
 .card-description{
-  font-size: 18px;
+  font-size: 16px;
   font-family:Montserrat-ExtraLight;
   text-align: center;
   margin: 6px 0px 0px 0px;
 }
 
 .card-title{
-  font-size: 24px;
+  font-size: 18px;
   font-family: Montserrat-ExtraBold;
   margin: 0px;
   text-transform: uppercase;
@@ -321,6 +322,7 @@ table th {
   color: #949494;
   font-size: 12px;
   font-family: Montserrat-Bold;
+  margin-left: 0px;
 }
 
 table {
@@ -331,8 +333,15 @@ table, th, td {
   border-collapse: collapse;
 }
 
-th, td {
+td {
   padding: 14px;
+  text-align: left;
+  font-family: Montserrat-Medium;
+  font-size: 18px;
+}
+
+th{
+  padding: 14px 0px 14px 14px;
   text-align: left;
   font-family: Montserrat-Medium;
   font-size: 18px;
@@ -663,7 +672,7 @@ input {
 
 .bundle-details-header{
   font-size: 12px;
-  color: #656363;
+  color: #949494;
   font-family: Montserrat-Bold;
   margin-bottom: 4px;
 }
@@ -693,9 +702,9 @@ input {
 
 .bundle-details-menu{
   flex-grow: 1;
-      height: 300px;
-      overflow-y: scroll;
-      flex-basis: 55%;
+  height: 300px;
+  overflow-y: scroll;
+  flex-basis: 55%;
 }
 
 
@@ -1193,5 +1202,178 @@ font-size: 28px;
 
 .checkout-message{
   color: #4a4a4a;
-font-size: 24px;
+  font-size: 24px;
+}
+
+.bundle-details-options{
+  display: flex;
+  margin-top: 12px;
+  margin-bottom: 16px;
+  flex-wrap: wrap;
+}
+
+
+/* CHECKBOX CSS */
+/* The container */
+.bundle-options-container {
+  display: block;
+  position: relative;
+  padding-left: 24px;
+  /* margin-bottom: 12px; */
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin:0px 32px 32px 0px;
+}
+
+/* Hide the browser's default checkbox */
+.bundle-options-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border-radius: 8px;
+  border: 2px solid #B1B1B1;
+}
+
+/* On mouse-over, add a grey background color */
+.bundle-options-container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.bundle-options-container input:checked ~ .checkmark {
+  background-color: #008042;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.bundle-options-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.bundle-options-container .checkmark:after {
+  left: 7px;
+  top: 3px;
+  width: 4px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.options-details{
+  display: flex;
+  flex-direction: column;
+  margin-left: 8px;
+}
+
+.options-price{
+  font-size: 10px;
+  margin-top: 4px;
+  font-weight: bold;
+}
+
+
+.options-new-details{
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+.options-new-container{
+  display: flex;
+}
+
+/* STYLING CHECKBOX */
+.checkboxFive {
+  position: relative;
+  margin-right: 32px;
+  margin-bottom: 16px;
+}
+
+.checkboxFive label {
+  cursor: pointer;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 8px;
+  left: 0;
+  background: #eee;
+  /* border: 1px solid #ddd; */
+  border: 2px solid #B1B1B1;
+  border-radius: 8px;
+}
+
+.checkboxFive label:after {
+  opacity: 0.2;
+  content: '';
+  position: absolute;
+  width: 9px;
+  height: 5px;
+  background: transparent;
+  top: 5px;
+  left: 4px;
+  border: 3px solid black;
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg);
+}
+
+.checkboxFive label:hover::after {
+  opacity: 0.5;
+}
+
+.checkboxFive input[type=checkbox]:checked + label:after {
+  opacity: 1;
+  content: '';
+  position: absolute;
+  width: 9px;
+  height: 5px;
+  background: transparent;
+  top: 5px;
+  left: 4px;
+  border: 3px solid white;
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg);
+
+}
+
+.checkboxFive input[type=checkbox]:checked + label{
+  background-color: #008042;
+}
+
+.checkboxFive input{
+  margin-top: 14px !important;
+}
+
+.options-checkbox{
+  display: flex;
+  justify-content: center;
+}
+
+.options-name{
+  text-transform: capitalize;
 }
