--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -940,10 +940,10 @@ margin-bottom: 4px;
 }
 
 .delete-basket-details-text{
-  color: black;
-  font-size: 24px;
-  margin-top: 8px;
-  margin-bottom: 40px;
+  color: #4a4a4a;
+  font-size: 20px;
+  margin-top: 4px;
+  margin-bottom: 32px;
 }
 
 /* .footer-logo{
